[package]
name = "maltese"
version = "0.1.0"
authors = ["Hackerwins <susukang98@gmail.com>"]
description = "A sample project with wasm-pack"
license = "Apache-2.0"
repository = "https://github.com/hackerwins/maltese"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
